2007-12-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Config/_GrampsConfigKeys.py: added MyGrampsView
	* src/Config/_GrampsGconfKeys.py: added try/excepts on get_types

2007-12-30  Brian Matherly <brian@gramps-project.org>
	* src/plugins/GVFamilyLines.py:
	* src\PluginUtils\__init__.py:
	* src\PluginUtils\_MenuOptions.py:
	Rename "PeoplePickerOption" to "PersonListOption".

2007-12-30  Stéphane Charette  <stephanecharette@gmail.com>
	* src/ReportBase/_GraphvizReportDialog.py: write out the .dot file
	using ISO-8859 instead of UTF-8 (allows for things like accented chars)

2007-12-30  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/HtmlDoc.py: Fix undefined variables.

2007-12-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/OnThisDay.py: i18n changes
	* src/plugins/Makefile.am: added missing files
	* src/plugins/DefaultGadgets.py: i18n changes
	* src/QuickReports.py: allow callers to send obj directly
	* src/Simple/_SimpleTable.py: added support for objs
	* po/POTFILES.in: i18n changes

2007-12-30  Peter Landgren <peter.talken@telia.com>
	* src/plugins/rel:sv.py: Firts release 

2007-12-29  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/DescendReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/Calendar.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/FamilyLines.py:
	* src/plugins/FanChart.py:
	* src/DbState.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	* src/BaseDoc.py:
	More updates to better support MenuOptions. FamilyLines seems to work now.
